# nasa_exoplanets

./: linearregression.ipynb  main.py  pyproject.toml
